# parsergen

./: .gitignore  Cargo.toml  TODO
benches/: bench.rs  iai.rs  numbers.rs  parse_fixed.rs  time.rs
fixed_width_num_ops/: Cargo.toml
fixed_width_num_ops/benches/: bench.rs
fixed_width_num_ops/src/: lib.rs
fixed_width_num_ops/tests/: foo.rs
parsergen_derive/: Cargo.toml
parsergen_derive/src/: annotation.rs  lib.rs  primitives.rs
parsergen_impl/: Cargo.toml
parsergen_impl/src/: lib.rs  numbers.rs  primitives.rs  time.rs
parsergen_tests/: Cargo.toml
parsergen_tests/src/: lib.rs  tests.rs
src/: cents.rs  lib.rs  numbers.rs  primitives.rs  tests.rs  time.rs
tests/: iso_array.rs  offset.rs  simple.rs  simple2.rs  slice.rs  tests.rs  try_from.rs  via_try.rs
