[package]
name = "parsergen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsergen_derive = { path = "./parsergen_derive" }
parsergen_impl = { path = "./parsergen_impl" }
arrayref = "*"

[dev-dependencies]
criterion = { version = "0.3.5", features=["html_reports"] }
#fixed_width_num_ops = { path = "./fixed_width_num_ops" }
iai = "*"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "numbers"
harness = false


[[bench]]
name = "iai"
harness = false


[workspace]
members = ["parsergen_derive", "parsergen_impl", "parsergen_tests", "fixed_width_num_ops"]
