[package]
name = "parsergen"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "*"
luhn3 = { version = "1.0.2" }
parsergen_derive = { path = "./parsergen_derive" }

[dev-dependencies]
criterion = { version = "0.3.5", features=["html_reports"] }
iai = "*"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "parse_fixed"
harness = false

#[[bench]]
#name = "iai"
#harness = false



[[test]]
name ="simple"

[[test]]
name = "iso_array"

[[test]]
name = "simple2"

[[test]]
name = "tests"



[workspace]
members = [".", "parsergen_derive"]
