[package]
name = "parsergen"
version = "0.3.4"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3"
luhn3 = { version = "1.1.0" }
parsergen_derive = { path = "./parsergen_derive", version = "=0.3.3" }

[dev-dependencies]
criterion = { version = "0.3.5", features=["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "time"
harness = false

[[bench]]
name = "parse_fixed"
harness = false


[[test]]
name ="simple"

[[test]]
name = "iso_array"

[[test]]
name = "tests"

[[test]]
name = "try_from"

[[test]]
name = "slice"

[[test]]
name = "offset"

[workspace]
members = [".", "parsergen_derive"]
