[package]
name = "fixed_width_num_ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fixed_width_num_ops"
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"

[dev-dependencies]
criterion = { version = "0.3.5", features=["html_reports"] }

[[bench]]
name = "bench"
harness = false
